--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sqlite3: ^2.4.4
   path_provider: ^2.1.3
   path: ^1.9.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
